<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/new_bg"
    tools:context=".AboutApplication">

    <RelativeLayout
        android:id="@+id/upper_write"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:background="@color/background2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="36sp"
            android:fontFamily="@font/montserrat_extrabold"/>
    </RelativeLayout>

    <TextView
        android:id="@id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat_extrabold"
        android:text="@string/about_text"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/upper_write"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:backgroundTint="@color/new_bg"
        app:layout_constraintTop_toBottomOf="@+id/app_name"
        app:layout_constraintBottom_toTopOf="@id/cardView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.0">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/about_app"
            android:textColor="@color/text_color"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/new_bg"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintBottom_toTopOf="@id/cardView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.0">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/message_in_about"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:backgroundTint="@color/new_bg"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.0">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/warning"
            android:textSize="15sp" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/background2"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/new_bg"
            android:text="@string/main"
            android:textColor="@color/black"
            android:textSize="13sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="11sp"
            android:backgroundTint="@color/new_bg"
            android:text="@string/about_text"
            android:textColor="@color/black"
            android:textSize="13sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="1sp"
            android:backgroundTint="@color/new_bg"
            android:onClick="goContacts"
            android:text="@string/contacts_text"
            android:textColor="@color/black"
            android:textSize="13sp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
