<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/new_bg"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/upper_write"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:layout_marginBottom="590dp"
        android:background="@color/background2"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="36sp"
            android:fontFamily="@font/montserrat_extrabold"/>
    </RelativeLayout>


    <TextView
        android:id="@+id/main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_extrabold"
        android:text="@string/greeting"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upper_write"
        app:layout_constraintVertical_bias="0.021" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_extrabold"
        android:text="На вашем счету:"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_text"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/nowMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_extrabold"
        android:text="@string/app_name"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.034" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Выберите действие"
        android:textSize="20sp"
        android:fontFamily="@font/montserrat_extrabold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nowMoney"
        app:layout_constraintVertical_bias="0.096" />

    <Button
        android:id="@+id/income"
        android:layout_width="173dp"
        android:layout_height="69dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/menu"
        android:text="@string/income"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:onClick="goIncome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.191" />

    <Button
        android:id="@+id/outcome"
        android:layout_width="173dp"
        android:layout_height="69dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/outcome"
        android:text="@string/outcome"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:onClick="goOutcome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.191" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/background2"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/background2"
            android:text="@string/main"
            android:textColor="@color/black"
            android:textSize="13sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="11sp"
            android:backgroundTint="@color/background2"
            android:onClick="goAbout"
            android:text="@string/about_text"
            android:textColor="@color/black"
            android:textSize="13sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="1sp"
            android:backgroundTint="@color/background2"
            android:onClick="goContacts"
            android:text="@string/contacts_text"
            android:textColor="@color/black"
            android:textSize="13sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/story"
        android:textSize="20sp"
        android:fontFamily="@font/montserrat_extrabold"
        android:textColor="@color/black"
        android:onClick="goHistory"
        android:backgroundTint="@color/background2"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.823" />

</androidx.constraintlayout.widget.ConstraintLayout>